--- a/frontend/src/styles/home.scss
+++ b/frontend/src/styles/home.scss
@@ -105,6 +105,7 @@ $gray-900: #222222; // 最深的灰色，接近黑色
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   margin: 3rem 0;
+  padding: 0 2rem;
   
   .card {
     background-color: $gray-100;
@@ -157,6 +158,7 @@ $gray-900: #222222; // 最深的灰色，接近黑色
 // 布告欄區域
 .bulletin {
   margin: 3rem 0;
+  padding: 0 2rem;
   
   .board-frame {
     padding: 2rem;
@@ -323,7 +325,7 @@ $gray-900: #222222; // 最深的灰色，接近黑色
       gap: 30px; // 增加間距
       transition: transform 0.5s ease;
       list-style: none;
-      padding: 0;
+      padding: 1rem 0;
       margin: 0;
     }
   }
@@ -474,7 +476,7 @@ $gray-900: #222222; // 最深的灰色，接近黑色
 .page-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0;
   
   &.no-top-margin {
     padding-top: 0;
@@ -507,7 +509,7 @@ $gray-900: #222222; // 最深的灰色，接近黑色
       grid-template-columns: 1fr; // 小屏幕顯示1列
     }
   }
-  
+
   .hero-banner .hero-content {
     .hero-title {
       font-size: 2.5rem;
