--- a/frontend/src/styles/news.scss
+++ b/frontend/src/styles/news.scss
@@ -29,8 +29,9 @@
 }
 
 .hero-title {
-  margin-bottom: 1rem;
-  font-size: 2.5rem;
+  margin: 2rem;
+  font-size: 2rem;
+  font-family: 'Cinzel', serif;
   text-shadow: 2px 2px 4px rgba(0,0,0,.3);
   position: relative;
   z-index: 1;
