--- a/frontend/src/styles/board.scss
+++ b/frontend/src/styles/board.scss
@@ -8,7 +8,8 @@
 .page-title {
   text-align: center;
   margin-bottom: 2rem;
-  font-size: 2.5rem;
+  font-family: 'Cinzel', serif;
+  font-size: 2rem;
   color: $primary-text;
   position: relative;
   
