--- a/frontend/src/styles/links.scss
+++ b/frontend/src/styles/links.scss
@@ -7,6 +7,7 @@
 .page-title {
   text-align: center;
   margin-bottom: 2rem;
+  font-family: 'Cinzel', serif;
   font-size: 2rem;
   color: #2c3e50;
 }
